[package]
name = "onion_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
tokio-native-tls = "0.3"
native-tls = "0.2"
uuid = { version = "1.7", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
openssl = "0.10"
x25519-dalek = "2.0"
rand = "0.8"
sodiumoxide ="0.2"
hkdf = "0.12"
sha2 = "0.10"
rand_chacha = "0.3"
rand_core = "0.6"
sha3 = "0.10"
aes-gcm = "0.10"
aead = "0.5"
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"
config = "0.14"
bellman = "0.14"
bls12_381 = "0.8"
gtk4 = "0.8"
gio = "0.19"
futures = "0.3.30"
pkcs8 = "0.10.2"
ring = "0.17.8"
secrecy = "0.8.0"
zeroize = "1.7.0"